<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_title">Известные личности</string>
    <string name="roman_kamushken">Roman Kamushken</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="todo">TODO</string>
    <string name="text_1">Check out awesome updates for Android design kit for Figma. Now more screens and more categories.</string>
    <string name="replay_count_1">117 REPLAYS</string>
    <string name="time_2">18 minutes ago</string>
    <string name="username_2">Tina Turbina</string>
    <string name="username_3">Tomek Kuwalskij</string>
    <string name="text_3">“into component container and with resizing constraints set????”</string>
    <string name="text_2">“into component container and with resizing constraints set????”</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
</resources>